# ctfcup-2024-ad

./: .gitignore  README.md  check.py  forcad_config.yml
services/ark/: Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  rust-toolchain
services/ark/.sqlx/: query-008171667d7855be41cbb8ba9184cdbc2c133a7ff0596c1522ef411b28a348df.json  query-157f1a5b62c28bde32073d158c9af68d1605d368efe6032581e655ba4ff23067.json  query-1c5ed8800559566fa57294dcc907f7013fd1329899af78694621ae314f511bdd.json  query-28771c7d7a4c86f3897e83ed4a4ea45fa3cf6a7c71b2fc648e49f160fee09d8d.json  query-2ca064d36be5959ae8e003eb938a7f89f70acfe6955ebb108f876c83956489d2.json  query-2e50506124b3ed2fb38c5179ef15518cd07086b79ab3975d23628a277711a20b.json  query-403e29471c8e5c6d48ca135964aff37a6fb3c8d7dd8678d6369829f9ab445dd7.json  query-51cc916d5b8a2eac251555f58d36bdd9437c6dc0b45c0c8fe143835b2d9624b7.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-7ab97ddd1828595bbef72c4f10094a26541acf52de87d84e9d4d3ca46e555525.json  query-8a5e8b2374085e57abd5fa0b689e4750512123f16a8830a56b7d7bc9b468ee26.json  query-968d7c12401091f323e2a7048e38fa8b3e8fda9b0bbceceeb0ac035b68ff0ec6.json  query-9d57c60ddc9453b94eade5808206270b01d590697aa26d677504c5ed68c9f4ab.json  query-c70831c895f8654143fabcb65173ac33bf2d8185917b83e3b0adf3dc62b8ddc2.json  query-d169c558df910c04f98627f46d1f0ee4fbbab4c51667ccbcee9cf966ba8db9b1.json  query-d8520a96b6cc334acd3a0d85006ac510ff55b2c2797d7e489f3a573d1104f3f6.json  query-de74da22823ba59a57975bd4ce2358dda9a0c6478e2b146d428dd5182ecf41ea.json  (+1 more)
(+48 files in other folders)
