[package]
name = "ark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ark"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
color-eyre = "0.6.3"
eyre = "0.6.3"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
clean-path = "0.2.1"
